--- a/IDM-18-03/Davydyuk/index.html
+++ b/IDM-18-03/Davydyuk/index.html
@@ -27,7 +27,10 @@
                         <li>
                             <p>Лабораторная работа №2 <a href="#lab2" class="scrolly">"Разработка простого веб-приложения":</a></p>
                             <p>Проектирование и разработка индивидуального или коллективного веб-приложения (SPA) с использованием
-                                html,css,js + json,xml</p>
+                                html,css,js + json,xml <br>
+				
+			<a href="https://akema8.github.io/project">Смотреть проект (диаграмма Вороного)</a>
+				</p>
                         </li>
                         <li>
                             <p>Лабораторная работа №3 <a href="#lab3" class="scrolly">"Настройка локальной сети передачи данных":</a></p>
@@ -52,7 +55,7 @@
                     <ol>
                         <li>
                             <p>Регистрация на GitHub.</p>
-                            <p><a href="https://github.com/Akema8">профиль на гитхаб</a></p>
+                            <p><a href="https://github.com/Akema8">Профиль на гитхаб</a></p>
                         </li>
                         <li>
                             <p>Персональная страница-отчет.</p>
@@ -79,18 +82,19 @@
                 <ol>
                     <li>
                         <p>Собрать команду для разработки веб-приложения и распределить роли.</p>
-                        <p><a href="https://">Репозиторий командного проекта.</a></p>
+                        <p>
+				<a href="https://github.com/Akema8/akema8.github.io/blob/master/project.html">Ссылка на код проекта.</a></p>
                     </li>
                     <li>
                         <p>Сделать разметку страницы по макету. Прописать стили страницы.</p>
                     </li>
                     <li>
                         <p>Прописать JavaScript-функционал.</p>
-                        <p><a href="https://">Исходный код на JavaScript</a>.</p>
+                        
                     </li>
                     <li>
                         <p>Загрузить действующий проект на GitHub.</p>
-                        <p><a href="https://">Результат: Коллективный проект.</a>.</p>
+                        <p><a href="https://akema8.github.io/project">Результат: перейти на страницу проекта</a>.</p>
                     </li>
                 </ol>
 
