--- a/IDM-18-04/Gusev/index.html
+++ b/IDM-18-04/Gusev/index.html
@@ -14,6 +14,9 @@
   <h1>Гусев Юрий</h1>
   <h2>ИДМ-18-04</h2>
   <p><a href='1lab.html'><b>Лабораторная работа №1</b></a></p>
+  <p><a href='2lab.html'><b>Лабораторная работа №2</b></a></p>
   <p><a href='3lab.html'><b>Лабораторная работа №3</b></a></p>
+  <p><a href='netcalc/netcalc.html'><b>Проект</b></a></p>
+  <p><a href='https://github.com/stankin/inet-2018/wiki/%D0%91%D0%B8%D0%BB%D0%B5%D1%82-5'><b>wiki</b></a></p>
  </body>
 </html>
