--- a/IDM-18-01/Avetisyan/index.html
+++ b/IDM-18-01/Avetisyan/index.html
@@ -131,12 +131,12 @@ window.requestAnimationFrame(clock);
                         </li>
                         <li>
                             <p>Создать персональную веб страницу-отчет с использованием html, css, js.</p>
-                            <p><a href="https://stankin.github.io/inet-2018/IDM-18-01/Avetisyan/index.html">Персональная страница-отчет</a>.</p>
+                            <p><a href="https://github.com/stankin/inet-2018/blob/master/IDM-18-01/Avetisyan/index.html">Персональная страница-отчет</a>.</p>
 							
                         </li>
                         <li>
                             <p>Загрузить персональную веб страницу-отчет в репозиторий ИДМ-18-01 по курсу "Интернет-технологии" на GitHub.</p>
-                            <p><a href="https://stankin.github.io/inet-2018/IDM-18-01/Avetisyan">Папка с исходными кодами в репозитории</a>.</p>
+                            <p><a href="https://github.com/stankin/inet-2018/tree/master/IDM-18-01/Avetisyan">Папка с исходными кодами в репозитории</a>.</p>
                         </li>
                     </ol>
                 </div>
@@ -152,7 +152,7 @@ window.requestAnimationFrame(clock);
                     <ol>
                         <li>
                             <p>Собрать команду для разработки приложения и распределить роли.</p>
-                            <p><a href="https://stankin.github.io/inet-2018/IDM-18-01/Avetisyan/README.md">Страница команды</a>.</p>
+                            <p><a href="https://github.com/stankin/inet-2018/blob/master/IDM-18-01/Avetisyan/README.md">Страница команды</a>.</p>
                         </li>
                         <li>
                             <p> Прописать функционал и реализовать возможность работы с приложением в проекте</p>
